src/styles/pages/_opportunity.scss
.opportunity-page, .featured-result {
  h1{
    margin-top: 50px !important;
  }

  .usa-text-center{
    text-align: center;
  }

  .usa-button-small{
    @extend .usa-button;
    font-size: 15px;
    padding: 8px 12px;
  }

  /* Segment */
  /*============================*/
  .segment{
    background-color: #f5f5f5;
    padding:20px 0px;
    border-radius: 4px;
  }

  /* Card */
  /*============================*/
  .card h3{
    margin-top: 0;
    margin-bottom: 0;
  }

  .card h3 a{
    text-decoration: none;
  }

  /* Propose new font weight */
  /*.card strong,
  .card h3{
    font-weight: 600;
  }*/

  .card-simple{
    border-bottom: 1px solid #D4D4D5;
    padding-bottom: 30px;
  }

  .card{
    box-shadow: 0 1px 3px 0 #D4D4D5,0 0 0 1px #D4D4D5;
    border-radius: 4px;
    margin: 12px 0px;
    display: inline-block;
    width: 100%;
  }

  .card-header{
    padding: 10px 15px 10px 44px;
    position: relative;
    background-color: #efefef;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;

    -webkit-transition: opacity 300ms ease-out;
    -moz-transition: opacity 300ms ease-out;
    -o-transition: opacity 300ms ease-out;
    -ms-transition: opacity 300ms ease-out;
    transition: opacity 300ms ease-out;
  }

  .card-header-secure{
    padding: 10px 15px;
  }

  .card-header::before{
    position: absolute;
    left: 16px;
    top: 14px;
    color: #848484;
    font: normal normal normal 22px/1 FontAwesome;
  }

  .card-header.expanded > div{
    opacity: 0.8;
  }

  .card-header.expanded::before{
    content: "\f147";
  }

  .card-header.collapsed::before{
    content: "\f196";
  }

  .card-secure-content{
    padding: 10px 25px;
    border-top: 1px solid rgba(34,36,38,.1);
    color:#5f5f5f;
  }

  .card-secure-content p{
    margin: 0;
  }

  .card-extra-content{
    padding: 10px 15px 10px 10px;
    color: rgba(0,0,0,.4);
    border-top: 1px solid rgba(0,0,0,.05);
  }

  .card .label-container-inline{
    display: inline-block;
    margin-right: 15px;
  }

  .download-container{
    position: relative;
  }

  .download-container-header{
    position: relative;
    .download-button{
      top: 0px;
      right: -8px;
    }
  }

  .download-button{
    position: absolute;
    top: 8px;
    right: 10px;
  }

  /* Label List */
  /*============================*/
  .usa-label-list{
    list-style-type: none;
    padding-left: 0;
    margin: 0;
    overflow: hidden;
  }

  .usa-label-list > li:first-child{
    border-top: none;
  }

  .usa-label-list > li{
    margin-bottom: 5px;
    margin-top: 5px;
    padding-top: 8px;
    border-top: 1px solid rgba(204, 204, 204, 0.30);
  }

  .usa-label-list li > span:first-child{
    // width: 80px;
    font-weight: 700;
    font-size: 15px;
  }

  .usa-label-list li > span:first-child,
  .usa-label-list li > span:last-child{
    display: inline-block;
    vertical-align: text-top;
  }

  /* Zebra List */
  /*============================*/
  .usa-zebra-list{
    list-style-type: none;
    padding-left: 0;
    margin: 0;
    overflow: hidden;
  }

  .usa-zebra-list > li{
    margin-bottom: 0;
    border-top: 1px solid rgba(204, 204, 204, 0.30);
  }

  .usa-zebra-list > li:nth-child(even) {
    background-color: rgba(241, 241, 241, 0.35);
  }

  .usa-zebra-list > li:hover{
    background-color: rgba(241, 241, 241, 1);
    -webkit-transition: background-color 300ms ease-out;
    -moz-transition: background-color 300ms ease-out;
    -o-transition: background-color 300ms ease-out;
    -ms-transition: background-color 300ms ease-out;
    transition: background-color 300ms ease-out;
  }

  .usa-zebra-list li a{
    padding: 8px 14px;
    display: block;
    text-decoration: none;
  }

  .usa-zebra-list li a:hover{
    text-decoration: underline;
  }

  /* File Size */
  /*============================*/

}

